5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1680_1950.log
== TEST (2019-04-23 17:07:33) 
-- CODE:
temp = float(input("Temperatura em Celsius: "))
vento = float(input("Velocidade do vento em km/h: "))

if((temp >= -50 and temp <= 10):
	if(vento > 4.8):
		theta = 13.12 + 0.6215 * temp - (11.37 * vento ** 0.16) + (0.3965 * temp * vento ** 0.16)
		print(theta)
	else:
		print("Velocidade invalida")
else:
	print("Temperatura invalida")


-- ERROR:
File "XXXX", line 4
    if((temp >= -50 and temp <= 10):
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:07:53) 
-- CODE:
temp = float(input("Temperatura em Celsius: "))
vento = float(input("Velocidade do vento em km/h: "))

if((temp >= -50 and temp <= 10):
	if(vento > 4.8):
		theta = 13.12 + 0.6215 * temp - (11.37 * vento ** 0.16) + (0.3965 * temp * vento ** 0.16)
		print(theta)
	else:
		print("Velocidade invalida")
else:
	print("Temperatura invalida")


-- ERROR:
File "XXXX", line 4
    if((temp >= -50 and temp <= 10):
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:08:24) 
-- CODE:
temp = float(input("Temperatura em Celsius: "))
vento = float(input("Velocidade do vento em km/h: "))

if((temp >= -50 and temp <= 10):
	h = 1
	if(vento > 4.8):
		theta = 13.12 + 0.6215 * temp - (11.37 * vento ** 0.16) + (0.3965 * temp * vento ** 0.16)
		print(theta)
	else:
		print("Velocidade invalida")
else:
	print("Temperatura invalida")


-- ERROR:
File "XXXX", line 4
    if((temp >= -50 and temp <= 10):
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:08:36) 
-- CODE:
temp = float(input("Temperatura em Celsius: "))
vento = float(input("Velocidade do vento em km/h: "))

if((temp >= -50 and temp <= 10)):
	if(vento > 4.8):
		theta = 13.12 + 0.6215 * temp - (11.37 * vento ** 0.16) + (0.3965 * temp * vento ** 0.16)
		print(theta)
	else:
		print("Velocidade invalida")
else:
	print("Temperatura invalida")


-- OUTPUT:
Temperatura invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:08:54) 
-- CODE:
temp = float(input("Temperatura em Celsius: "))
vento = float(input("Velocidade do vento em km/h: "))

if((temp >= -50 and temp <= 10)):
	if(vento > 4.8):
		theta = 13.12 + 0.6215 * temp - (11.37 * vento ** 0.16) + (0.3965 * temp * vento ** 0.16)
		print(round(theta,4))
	else:
		print("Velocidade invalida")
else:
	print("Temperatura invalida")


-- OUTPUT:
Temperatura invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:09:00) 
-- CODE:
temp = float(input("Temperatura em Celsius: "))
vento = float(input("Velocidade do vento em km/h: "))

if((temp >= -50 and temp <= 10)):
	if(vento > 4.8):
		theta = 13.12 + 0.6215 * temp - (11.37 * vento ** 0.16) + (0.3965 * temp * vento ** 0.16)
		print(round(theta,4))
	else:
		print("Velocidade invalida")
else:
	print("Temperatura invalida")


-- OUTPUT:
Temperatura invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:09:11) 
-- CODE:
temp = float(input("Temperatura em Celsius: "))
vento = float(input("Velocidade do vento em km/h: "))

if((temp >= -50 and temp <= 10)):
	if(vento > 4.8):
		theta = 13.12 + 0.6215 * temp - (11.37 * vento ** 0.16) + (0.3965 * temp * vento ** 0.16)
		print(round(theta,4))
	else:
		print("Velocidade invalida")
else:
	print("Temperatura invalida")


-- OUTPUT:
Temperatura invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 17:09:18) 
-- CODE:
temp = float(input("Temperatura em Celsius: "))
vento = float(input("Velocidade do vento em km/h: "))

if((temp >= -50 and temp <= 10)):
	if(vento > 4.8):
		theta = 13.12 + 0.6215 * temp - (11.37 * vento ** 0.16) + (0.3965 * temp * vento ** 0.16)
		print(round(theta,4))
	else:
		print("Velocidade invalida")
else:
	print("Temperatura invalida")


-- EXECUTION TIME:
0.21292
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
Temperatura invalida
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
Velocidade invalida
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
-14.9563
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
